* 2013-05-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 26807: Don't consider storage when checking for maximum allowed sessions
 - Fix for bug 26691: Modified error message in case of truncated fields

* 2013-05-26 - thorben.betten@open-xchange.com

 - Fix for bug 26737: Added update task to enlarge the UID field of calendar tables
 - Fix for bug 26781: Proper invocation of OXException constructor

* 2013-05-24 - thorben.betten@open-xchange.com

 - Fix for bug 26474: Avoid timeout through initiating 102 Processing interim responses
 - Fix for bug 26479: Accept multiple upload files associated with the same field name
 - Fix for bug 24519: Maintain inlined images during auto-save and forward/reply actions

* 2013-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 26760: Fixed possible ArrayIndexOutOfBoundsException

* 2013-05-22 - marc.arens@open-xchange.com

 - Fix for bug 26580: Remove superfluous warning

* 2013-05-21 - marcus.klein@open-xchange.com

 - Fix for bug 26680: Moved filemanagement bundles into an own package open-xchange-file-distribution.
 
 * 2013-05-17 - marc.arens@open-xchange.com

 - Fix for bug 26226: Use concurrent data structures to prevent NegativeArraySizeException
 - Fix for bug 25944: GETS are now periodically closed by server pongs

* 2013-05-16 - marcus.klein@open-xchange.com

 - Fix for bug 26085: Disabling push UDP bundle by setting all push UDP related enabling properties to false.

* 2013-05-16 - thorben.betten@open-xchange.com

 - Fix for bug 26611: Sanitize masked/commented HTML tags
 - Fix for bug 26648: User concurrent-capable List/SortedSet to support concurrent accesses without throwing ConcurrentModificationException

* 2013-05-15 - marcus.klein@open-xchange.com

 - Fix for bug 26179: Removed configuration file for audit extension and placed it as example in the packages documentation.

* 2013-05-15 - martin.herfurth@open-xchange.com

 - Fix for bug 25985: Task config mapping for jslob interface.
